[gd_scene load_steps=27 format=3 uid="uid://ba7ngwob15mys"]

[ext_resource type="Script" path="res://save_game_menu.gd" id="1_3axqs"]
[ext_resource type="Texture2D" uid="uid://dxc4ik584thak" path="res://Assets/Backgrounds/saveGameBg.png" id="2_12ve1"]
[ext_resource type="Texture2D" uid="uid://b7wbo1fvq35t8" path="res://Assets/Buttons/emptySlot1.png" id="3_j46pg"]
[ext_resource type="Texture2D" uid="uid://t0y71c4xy6fv" path="res://Assets/Buttons/emptySlot1Active.png" id="4_7fy1m"]
[ext_resource type="Texture2D" uid="uid://cb8ajkxl0bj8a" path="res://Assets/Buttons/emptySlot1Hover.png" id="5_04tti"]
[ext_resource type="Texture2D" uid="uid://cg3gvps4r81s8" path="res://Assets/Buttons/emptySlot1Disabled.png" id="6_dbwhu"]
[ext_resource type="FontFile" uid="uid://b3qjvntr1xwwd" path="res://Assets/kenney_ui-pack-space-expansion/Fonts/kenvector_future.ttf" id="7_4rvm6"]
[ext_resource type="Texture2D" uid="uid://dqtkwa35swd15" path="res://Assets/Buttons/emptySlot2.png" id="8_wxjdq"]
[ext_resource type="Texture2D" uid="uid://dq8it2maqj4df" path="res://Assets/Buttons/emptySlot2Active.png" id="9_u31wd"]
[ext_resource type="Texture2D" uid="uid://cys6slljhpaoa" path="res://Assets/Buttons/emptySlot2Hover.png" id="10_lvccw"]
[ext_resource type="Texture2D" uid="uid://btnr0n0onacik" path="res://Assets/Buttons/emptySlot2Disabled.png" id="11_07jah"]
[ext_resource type="Texture2D" uid="uid://0ywucwcr5fgp" path="res://Assets/Buttons/emptySlot3.png" id="12_pnjrx"]
[ext_resource type="Texture2D" uid="uid://dssj12wylxhbc" path="res://Assets/Buttons/emptySlot3Active.png" id="13_xqio5"]
[ext_resource type="Texture2D" uid="uid://baviiw0l31d" path="res://Assets/Buttons/emptySlot3Hover.png" id="14_kehno"]
[ext_resource type="Texture2D" uid="uid://c6mncpvxv7luv" path="res://Assets/Buttons/emptySlot3Disabled.png" id="15_kgx3a"]
[ext_resource type="Texture2D" uid="uid://cg18yq4nltr4f" path="res://Assets/Buttons/returnButton.png" id="16_16frh"]
[ext_resource type="Texture2D" uid="uid://c1h1654vjojfo" path="res://Assets/Buttons/returnButtonActive.png" id="17_26u8d"]
[ext_resource type="Texture2D" uid="uid://c3a5441e1rul1" path="res://Assets/Buttons/returnButtonHover.png" id="18_e5jtb"]
[ext_resource type="Texture2D" uid="uid://27b2ixnjcvyk" path="res://Assets/Backgrounds/overwritePopup.png" id="19_p4h1s"]
[ext_resource type="Texture2D" uid="uid://waycglg31gco" path="res://Assets/Buttons/confirmButton.png" id="20_lxfp6"]
[ext_resource type="Texture2D" uid="uid://dooue3xe4qiin" path="res://Assets/Buttons/noConfirmQuitButton.png" id="20_mxxc2"]
[ext_resource type="Texture2D" uid="uid://ctcir6c32ws46" path="res://Assets/Buttons/noConfirmQuitButtonActive.png" id="21_cd3f7"]
[ext_resource type="Texture2D" uid="uid://dtma507gvn67i" path="res://Assets/Buttons/confirmButtonActive.png" id="21_xm0ib"]
[ext_resource type="Texture2D" uid="uid://c66k1gab0givo" path="res://Assets/Buttons/noConfirmQuitButtonHover.png" id="22_hg7eg"]
[ext_resource type="Texture2D" uid="uid://qsonal5gqo5c" path="res://Assets/Buttons/confirmButtonHover.png" id="22_qw5ol"]

[sub_resource type="Theme" id="Theme_xb7t0"]

[node name="SaveGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3axqs")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 2
position = Vector2(960, 540)
texture = ExtResource("2_12ve1")

[node name="Slot1Button" type="TextureButton" parent="."]
light_mask = 2
layout_mode = 0
offset_left = 560.0
offset_top = 380.0
offset_right = 1360.0
offset_bottom = 480.0
texture_normal = ExtResource("3_j46pg")
texture_pressed = ExtResource("4_7fy1m")
texture_hover = ExtResource("5_04tti")
texture_disabled = ExtResource("6_dbwhu")

[node name="Label" type="Label" parent="Slot1Button"]
visible = false
layout_mode = 0
offset_left = 745.0
offset_top = 60.0
offset_right = 772.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource("7_4rvm6")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Label2" type="Label" parent="Slot1Button"]
visible = false
layout_mode = 0
offset_left = 800.0
offset_top = 25.0
offset_right = 948.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("7_4rvm6")
theme_override_font_sizes/font_size = 24
text = "Tutorial"

[node name="Slot2Button" type="TextureButton" parent="."]
light_mask = 2
layout_mode = 0
offset_left = 560.0
offset_top = 530.0
offset_right = 960.0
offset_bottom = 630.0
theme = SubResource("Theme_xb7t0")
texture_normal = ExtResource("8_wxjdq")
texture_pressed = ExtResource("9_u31wd")
texture_hover = ExtResource("10_lvccw")
texture_disabled = ExtResource("11_07jah")

[node name="Label" type="Label" parent="Slot2Button"]
visible = false
layout_mode = 0
offset_left = 745.0
offset_top = 60.0
offset_right = 772.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource("7_4rvm6")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Label2" type="Label" parent="Slot2Button"]
visible = false
layout_mode = 0
offset_left = 800.0
offset_top = 25.0
offset_right = 948.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("7_4rvm6")
theme_override_font_sizes/font_size = 24
text = "Tutorial"

[node name="Slot3Button" type="TextureButton" parent="."]
light_mask = 2
layout_mode = 0
offset_left = 560.0
offset_top = 680.0
offset_right = 960.0
offset_bottom = 780.0
texture_normal = ExtResource("12_pnjrx")
texture_pressed = ExtResource("13_xqio5")
texture_hover = ExtResource("14_kehno")
texture_disabled = ExtResource("15_kgx3a")

[node name="Label" type="Label" parent="Slot3Button"]
visible = false
layout_mode = 0
offset_left = 745.0
offset_top = 60.0
offset_right = 772.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource("7_4rvm6")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Label2" type="Label" parent="Slot3Button"]
visible = false
layout_mode = 0
offset_left = 800.0
offset_top = 25.0
offset_right = 948.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("7_4rvm6")
theme_override_font_sizes/font_size = 24
text = "Tutorial"

[node name="ReturnButton" type="TextureButton" parent="."]
light_mask = 2
layout_mode = 0
offset_left = 760.0
offset_top = 830.0
offset_right = 1160.0
offset_bottom = 930.0
texture_normal = ExtResource("16_16frh")
texture_pressed = ExtResource("17_26u8d")
texture_hover = ExtResource("18_e5jtb")

[node name="QuitPopup" type="Control" parent="."]
visible = false
light_mask = 2
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_top = 540.0
offset_right = 1000.0
offset_bottom = 580.0

[node name="Sprite2D2" type="Sprite2D" parent="QuitPopup"]
light_mask = 2
z_index = 1
texture = ExtResource("19_p4h1s")

[node name="ConfirmButton" type="TextureButton" parent="QuitPopup"]
light_mask = 2
z_index = 1
layout_mode = 0
offset_left = -200.0
offset_top = -61.0
offset_right = 200.0
offset_bottom = 39.0
texture_normal = ExtResource("20_lxfp6")
texture_pressed = ExtResource("21_xm0ib")
texture_hover = ExtResource("22_qw5ol")

[node name="NoConfirmButton" type="TextureButton" parent="QuitPopup"]
light_mask = 2
z_index = 1
layout_mode = 0
offset_left = -200.0
offset_top = 89.0
offset_right = 200.0
offset_bottom = 189.0
texture_normal = ExtResource("20_mxxc2")
texture_pressed = ExtResource("21_cd3f7")
texture_hover = ExtResource("22_hg7eg")

[connection signal="button_up" from="Slot1Button" to="." method="_on_slot_1_button_button_up"]
[connection signal="mouse_entered" from="Slot1Button" to="." method="_on_slot_1_button_mouse_entered"]
[connection signal="mouse_exited" from="Slot1Button" to="." method="_on_slot_1_button_mouse_exited"]
[connection signal="button_up" from="Slot2Button" to="." method="_on_slot_2_button_button_up"]
[connection signal="mouse_entered" from="Slot2Button" to="." method="_on_slot_2_button_mouse_entered"]
[connection signal="mouse_exited" from="Slot2Button" to="." method="_on_slot_2_button_mouse_exited"]
[connection signal="button_up" from="Slot3Button" to="." method="_on_slot_3_button_button_up"]
[connection signal="mouse_entered" from="Slot3Button" to="." method="_on_slot_3_button_mouse_entered"]
[connection signal="mouse_exited" from="Slot3Button" to="." method="_on_slot_3_button_mouse_exited"]
[connection signal="button_up" from="ReturnButton" to="." method="_on_return_button_button_up"]
[connection signal="button_up" from="QuitPopup/ConfirmButton" to="." method="_on_confirm_button_button_up"]
[connection signal="button_up" from="QuitPopup/NoConfirmButton" to="." method="_on_no_confirm_button_button_up"]
